# manager-packs

./: .gitignore  AGENTS.md  Makefile  NOTES.md  README.md  SPEC.md  TODO.md  pyproject.toml  skills-lock.json  sync-skills.sh
studio/: README.md  pyproject.toml
studio/data/: ab-test-stream.json  ab-test-stream.parquet  bandit-env.json  bandit-env.parquet  binary-classification.json  binary-classification.parquet  blobs.json  blobs.parquet  coin-flip.json  coin-flip.parquet  friedman.json  friedman.parquet  hetero-regression.json  hetero-regression.parquet  high-dim.json  high-dim.parquet  messy-binary.json  messy-binary.parquet  multiclass-classification.json  multiclass-classification.parquet  multilabel-classification.json  multilabel-classification.parquet  regression.json  regression.parquet  sequence-ranking.json  sequence-ranking.parquet
studio/datagen/: cli.py  corrupt.py  output.py
studio/datagen/problems/: ab_test_stream.py  bandit_env.py  binary_classification.py  blobs.py  coin_flip.py  corrupt_cmd.py  friedman.py  hetero_regression.py  high_dim.py  messy_binary.py  multiclass_classification.py  multilabel_classification.py  regression.py  sequence_ranking.py
studio/scratch/binary-classification/src/: plots.py  predict.py  train.py
studio/scratch/multiclass-classification/src/: plots.py  predict.py  train.py
studio/scratch/multilabel-classification/src/: plots.py  (+2 more)
studio/scratch/tabular-eda/: README.md
studio/scratch/unsupervised/: SKILL.md
studio/skills/building-bundles/: SKILL.md
studio/templates/pymc-inference/: README.md  SKILL.md
(+86 files in other folders)
