[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "managerpack"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "stripe>=11.0",
    "praw>=7.0",
    "resend>=2.0",
    "python-dotenv>=1.2",
]

[project.scripts]
managerpack = "managerpack.cli:main"

[tool.setuptools.packages.find]
include = ["managerpack*"]
