[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "managerpack-studio"
version = "0.1.0"
description = "Content development workspace for ManagerPack — datagen, templates, scratch."
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "shap>=0.46",
    "ibis-framework[duckdb]>=9",
    "mlflow>=2.16",
    "pymc>=5.16",
    "arviz>=0.19",
    "marimo>=0.9",
]

[project.scripts]
datagen = "datagen.cli:main"

[tool.setuptools.packages.find]
include = ["datagen*"]
